Fixed heading colors for correct contrast

--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -65,5 +65,5 @@ p {
     background-color: #e0ffff;
     margin: 5px;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 6px;
 }
